--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
     <div class="content">
       this is content
     </div>
-    <script
+    <!-- 
+      <script id="smart-banner-script" name="Fotboll Sthlm" subtitle="App om AIK, Bajen och Djurgården" dynamic_root="https://fotbollsthlm.page.link" src="https://cdn.jsdelivr.net/gh/ercadev/smart-app-banner@master/index.min.js"></script>
+    -->
+  <script
       id="smart-banner-script"
       name="Fotboll Sthlm"
-      subtitle="App om AIK, Bajen och Djurgården"
-      dynamic_root="https://fotbollsthlm.page.link/"
+      subtitle="Allt från sajten nu i appen"
+      dynamic_root="https://fotbollsthlm.page.link"
+      post_id="31103"
       src="/index.js"
-      post_id="23456"
+
     ></script>
+    
+  
   </body>
 </html>
