--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       subtitle="Allt från sajten nu i appen"
       dynamic_root="https://fotbollsthlm.page.link"
       post_id="31103"
-      src="/index.js"
+      src="/banner.js"
 
     ></script>
     
